# epollServer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Todo.md  readme.md
example/: CMakeLists.txt  concurrent_client.c  echo_server.c  multithread_server.c  tcp2udp.c  test_main.c
include/: buffer.h  epollServer.h
src/: CMakeLists.txt  buffer.c  buffer.h  epollServer.c  epollServer.h  util.c  util.h
test/: tcpc.c  test_data.txt
